# volt

./: .envrc  .gitignore  LICENSE  Makefile  README.md  build.zig  build.zig.zon  components.py  components.py.j2  compose.yml  custom_types.py  example.py  flake.nix  generator.py  pyproject.toml  query.sql  requirements.txt  router.py  schema.sql  setup.py  sqlc.yaml  test.py  zig_types.py
.github/workflows/: pr.yml  pypi.yml
db/: models.py  query.py
htmx/: htmx-ext-fragments.js
py/: router.py  zig_types.py
src/: http.zig  main.zig  middleware.zig  router.zig  routing.zig  volt.zig
static/: styles.css  tailwind.css
templates/: base.html  demo.html  features.html  home.html
volt/: __init__.py  app.py  app_test.py  cli.py  components.py  components.py.j2  config.py  conftest.py  generator.py  generator_test.py  http.py  lifespan_test.py  log.py  middleware.py  router.py  test_server.py  test_trie.py  trie.py  trie_test.py  zig_types.py
