[project]
name = "volt-framework"
dynamic = ["version"]
authors = [
  { name="Nick Henderson", email="nick@trkl.dev" },
]
description = "A lightning-fast, opinionated web framework with a high-performance Zig substrate"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["web", "framework", "http", "async", "performance", "zig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "jinja2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "requests",
  "pywatchman",
]

[project.urls]
Homepage = "https://github.com/trkl-dev/volt"
Issues = "https://github.com/trkl-dev/volt/issues"
Source = "https://github.com/trkl-dev/volt"

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["volt"]

[tool.setuptools.package-data]
volt = ["lib/*.so", "lib/*.dylib", "lib/*.dll"]

[tool.setuptools_scm]

[tool.pyright]
reportAny = false
reportExplicitAny = false
