[project]
name = "volt-framework"
dynamic = ["version"]
authors = [
  { name="Nick Henderson", email="nick@trkl.dev" },
]
description = "A lightning-fast, opinionated web framework with a high-performance Zig substrate"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["web", "framework", "http", "async", "performance", "zig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "jinja2",
  "uvicorn"
]

[project.optional-dependencies]
# For developers using Volt in their work
dev = [
  "pywatchman",
]
# For developing Volt
maintainer = [
  "pytest",
  "requests",
]
# For building Volt
build = [
  "setuptools",
  "setuptools_scm",
  "build",
  "wheel",
  "twine",
]

[project.urls]
Homepage = "https://volt.trkl.dev"
Issues = "https://github.com/trkl-dev/volt/issues"
Source = "https://github.com/trkl-dev/volt"

[project.scripts]
volt = "volt.cli:main"

[tool.pyright]
reportAny = false
reportExplicitAny = false

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["volt"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.volt]
log_level = "DEBUG"

[tool.ruff]
line-length = 120
